--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,45 @@
     "Ssl": null,
     "User": null,
     "Password": null
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning",
+        "System": "Warning",
+        "Serilog.AspNetCore.RequestLoggingMiddleware": "Information",
+        "Microsoft.EntityFrameworkCore.Query": "Error"
+      }
+    },
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ],
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "@mt = 'An unhandled exception has occurred while executing the request.'"
+        }
+      }
+    ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/temp/blazor/logs/Test7_log-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}]{ZZZSourceContext} [{IP}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
+
 }
