--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuvaConnection": "Data Source=BLACKI/blacki;Connection Timeout=30;User Id=quva;Password=quva;",
-    "QusyConnection": "Data Source=blacki/blacki;Connection Timeout=30;User Id=qusy;Password=qusy;"
+    "QuvaConnection": "USER ID=QUVA; PASSWORD=quva; DATA SOURCE=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST = 127.0.0.1)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME = blacki))); PERSIST SECURITY INFO=True; LOAD BALANCING=false; HA EVENTS=false;",
+
+    "QusyConnection": "Data Source=blacki/blacki;Connection Timeout=30;User Id=qusy;Password=qusy;",
+
+    "StudioConnection": "Data Source=BLACKI/blacki;Connection Timeout=30;User Id=quva;Password=quva;"
   },
   "Smtp": {
     "Host": null,
