--- a/appsettings.json
+++ b/appsettings.json
@@ -25,7 +25,7 @@
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
-      "Override": {
+      "XXOverride": {
         "Microsoft.EntityFrameworkCore.Database.Command": "Information",
         "Microsoft": "Warning",
         "Microsoft.AspNetCore": "Warning",
@@ -39,7 +39,7 @@
       "FromLogContext",
       "WithMachineName"
     ],
-    "Filter": [
+    "XXFilter": [
       {
         "Name": "ByExcluding",
         "Args": {
@@ -52,7 +52,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:/temp/blazor/logs/Test7_log-.log",
+          "path": "D:/temp/blazor/logs/QwTest7-stage-.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}]{ZZZSourceContext} [{IP}] {Message:lj}{NewLine}{Exception}"
         }
