--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,24 +1,13 @@
 {
-  "Smtp": {
-    "Host": "securesmtp.t-online.de",
-    "Port": 587,
-    "Ssl": true,
-    "User": "martin-dambach@t-online.de",
-    "Password": "Strohm@rkt2"
-  },
+  "DetailedErrors": true,
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information",
-      "XXOverride": {
-        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Default": "Debug",
+      "Override": {
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.Hosting.Lifetime": "Warning",
-        "System": "Warning",
-        "Serilog.AspNetCore.RequestLoggingMiddleware": "Information",
-        "Microsoft.EntityFrameworkCore.Query": "Error"
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "Enrich": [
@@ -38,9 +27,11 @@
       {
         "Name": "File",
         "Args": {
-          "path": "D:/temp/blazor/logs/QwTest7-Develop-.log",
+          "path": "D:/temp/blazor/logs/QwTest7-develop-.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}]{ZZZSourceContext} [{IP}] {Message:lj}{NewLine}{Exception}"
+          "fileSizeLimitBytes": 65536,
+          "rollOnFileSizeLimit": false,
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{IP}]{XXSourceContext} {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
