--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  "DetailedErrors": true,
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "QuvaConnection": "USER ID=QUVA; PASSWORD=quva; DATA SOURCE=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST = 127.0.0.1)(PORT = 1521))(CONNECT_DATA=(SERVICE_NAME = blacki))); PERSIST SECURITY INFO=True; LOAD BALANCING=false; HA EVENTS=false;",
@@ -13,19 +9,20 @@
 
     "StudioConnection": "Data Source=BLACKI/blacki;Connection Timeout=30;User Id=quva;Password=quva;"
   },
-  "Smtp": {
-    "Host": null,
-    "Port": null,
-    "Ssl": null,
-    "User": null,
-    "Password": null
-  },
+  "OracleSQLCompatibility": "11",
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Warning",
+      "Override": {
+      },
       "XXOverride": {
+        "Microsoft.AspNetCore.Routing": "Debug",
+        "Microsoft.AspNetCore.Hosting": "Information",
+        "System.Net.Http.HttpClient": "Information",
+        "Microsoft.AspNetCore.Mvc.Infrastructure": "Information",
+
         "Microsoft.EntityFrameworkCore.Database.Command": "Information",
         "Microsoft": "Warning",
         "Microsoft.AspNetCore": "Warning",
@@ -54,10 +51,17 @@
         "Args": {
           "path": "D:/temp/blazor/logs/QwTest7-stage-.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}]{ZZZSourceContext} [{IP}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{IP}]{XXSourceContext} {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
-  }
+  },
 
+  "Smtp": {
+    "Host": null,
+    "Port": null,
+    "Ssl": null,
+    "User": null,
+    "Password": null
+  }
 }
