--- a/QwTest7.csproj
+++ b/QwTest7.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.12" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
