--- a/efpt.config.json
+++ b/efpt.config.json
@@ -1,13 +1,13 @@
 ﻿{
    "CodeGenerationMode": 3,
-   "ContextClassName": "BlackiContext",
+   "ContextClassName": "KmpDbContext",
    "ContextNamespace": null,
    "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": "Data",
-   "OutputPath": "Models\\Blacki",
+   "OutputPath": "Models\\KmpDb",
    "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "QwTest7",
    "Schemas": null,
@@ -15,19 +15,7 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
-         "Name": "QUVA.FAHRZEUGE",
-         "ObjectType": 0
-      },
-      {
          "Name": "QUVA.FILTERABFRAGEN",
-         "ObjectType": 0
-      },
-      {
-         "Name": "QUVA.KARTEN",
-         "ObjectType": 0
-      },
-      {
-         "Name": "QUVA.SPEDITIONEN",
          "ObjectType": 0
       }
    ],
