Get Client IP Adress

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -29,7 +29,7 @@
         "Args": {
           "path": "D:/temp/blazor/logs/QwTest7-develop-.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{IP}]{XXSourceContext} {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{Maschine}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
