--- a/appsettings.json
+++ b/appsettings.json
@@ -14,22 +14,10 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Debug",
       "Override": {
-      },
-      "XXOverride": {
-        "Microsoft.AspNetCore.Routing": "Debug",
-        "Microsoft.AspNetCore.Hosting": "Information",
-        "System.Net.Http.HttpClient": "Information",
-        "Microsoft.AspNetCore.Mvc.Infrastructure": "Information",
-
-        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.Hosting.Lifetime": "Warning",
-        "System": "Warning",
-        "Serilog.AspNetCore.RequestLoggingMiddleware": "Information",
-        "Microsoft.EntityFrameworkCore.Query": "Error"
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "Enrich": [
@@ -51,7 +39,7 @@
         "Args": {
           "path": "D:/temp/blazor/logs/QwTest7-stage-.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{IP}]{XXSourceContext} {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}][{Maschine}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
