--- a/QwTest7.csproj
+++ b/QwTest7.csproj
@@ -5,6 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="%24{TempDir}\**" />
+    <Content Remove="%24{TempDir}\**" />
+    <EmbeddedResource Remove="%24{TempDir}\**" />
+    <None Remove="%24{TempDir}\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
       <PrivateAssets>all</PrivateAssets>
