--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
     "StudioConnection": "Data Source=BLACKI/blacki;Connection Timeout=30;User Id=quva;Password=quva;"
   },
   "OracleSQLCompatibility": "11",
+  "AnweKennung": "QUVA",
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
