--- a/efpt.config.json
+++ b/efpt.config.json
@@ -15,14 +15,27 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
-         "Name": "QUVA.FILTERABFRAGEN",
+         "Name": "QUSY.AUSWAHLEN",
+         "ObjectType": 0
+      },
+      {
+         "Name": "QUSY.DATEIEN",
+         "ObjectType": 0
+      },
+      {
+         "Name": "QUSY.FILTERABFRAGEN",
+         "ObjectType": 0
+      },
+      {
+         "Name": "QUSY.INITIALISIERUNGEN",
          "ObjectType": 0
       }
    ],
-   "UiHint": "QUVA.blacki",
+   "UiHint": "blacki:1521\/blacki",
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
+   "UseDateOnlyTimeOnly": false,
    "UseDbContextSplitting": false,
    "UseFluentApiOnly": false,
    "UseHandleBars": false,
