--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,8 @@
     "StudioConnection": "Data Source=BLACKI/blacki;Connection Timeout=30;User Id=quva;Password=quva;"
   },
   "OracleSQLCompatibility": "11",
-  "AnweKennung": "QUVA",
+  "AnweKennung": "QUVAR3",
+  "IniAnwe": "QUVAE",
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
